# jpred

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  install.bat  jpred.bat  package-lock.json  package.json  pyproject.toml  run.bat  upload-release.bat
src/: app.js  appLauncher.js  soundManager.js  timerEngine.js
tests/: __init__.py  stress_test.js  test_sound_launcher.js  test_timer_engine.js  test_timer_engine.py
