[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jpred"
version = "0.1.0"
description = "Job Hunting Time Tracker TUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "JPred"}
]
keywords = ["timer", "productivity", "tui", "job-hunting", "tracking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "textual>=0.50.0",
]

[project.scripts]
jpred = "jpred.main:main"

[project.urls]
Homepage = "https://github.com/jpred/jpred"

[tool.setuptools.packages.find]
where = ["."]
include = ["jpred*"]
